Fix text editor metrics sizing when lines wrap

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -107,6 +107,7 @@ article
 
     > .editor-metrics
       metrics()
+      position absolute
       width 100%
       box-sizing border-box
       padding 4px 8px
